# py-inspect

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
py_inspect/: __init__.py  core.py
tests/: test_py_inspect.py
